--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "mongoose": "^4.10.4",
+    "node-datetime": "^1.0.0",
     "passport": "^0.3.2"
   }
 }
