--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bimp_bekrafwebclass_1",
   "version": "1.0.0",
   "description": "BEKRAF WebClass with NodeJS",
-  "main": "app.js",
+  "main": "node app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
